# frontend-sdl-cpp

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: Findutf8proc.cmake
src/: AudioCapture.cpp  AudioCaptureImpl_SDL.cpp  CMakeLists.txt  ProjectMSDLApplication.cpp  ProjectMWrapper.cpp  ProjectMWrapper.h  RenderLoop.cpp  RenderLoop.h
src/gui/: ProjectMGUI.cpp  ProjectMGUI.h  SettingsWindow.cpp  SettingsWindow.h
src/resources/: projectMSDL.properties.in
